--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Joonho Yang</a><sup>1</sup>,</span>
+                <a href="https://sites.google.com/view/cau-li/members/student/joonhoyang?authuser=0" target="_blank">Joonho Yang</a><sup>1</sup>,</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Seunghyun Yoon</a><sup>2</sup>,</span>
+                  <a href="https://david-yoon.github.io/" target="_blank">Seunghyun Yoon</a><sup>2</sup>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Byeongjeong Kim</a><sup>1</sup>,</span>
+                    <a href="https://sites.google.com/view/cau-li/members/student/byeongjeongkim?authuser=0" target="_blank">Byeongjeong Kim</a><sup>1</sup>,</span>
                     <span class="author-block">
-                    <a href="https://hwanheelee1993.github.io/" target="_blank">Hwanhee Lee</a><sup>1</sup>,</span>
+                    <a href="https://hwanheelee1993.github.io/" target="_blank">Hwanhee Lee</a><sup>1</sup><sup>*</sup>
                   </span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Institution Name<br>Conferance name and year</span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+                    <span class="author-block">Department of Artificial Intelligence, Chung-Ang University<sup>1</sup>, Adobe Research, USA<sup>2</sup></span>
+                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Corresponding Author</small></span>
                   </div>
 
                   <div class="column has-text-centered">
