--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Department of Artificial Intelligence, Chung-Ang University<sup>1</sup>, Adobe Research, USA<sup>2</sup></span>
+                    <span class="author-block">Department of Artificial Intelligence, Chung-Ang University<sup>1</sup>, Adobe Research, USA<sup>2</sup><br>EMNLP 2024 Main</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Corresponding Author</small></span>
                   </div>
 
