--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <div class="columns">
         <div class="column">
           <div style="text-align: center;"> 
-            <img src="static/images/Figure2.pdf" alt="MY ALT TEXT" width="600" height="auto"/>
+            <img src="static/images/fig2.pdf" alt="MY ALT TEXT" width="600" height="auto"/>
           </div>
           <p>
             Hi
@@ -147,10 +147,6 @@
   </div>
 </section>
 <!-- End Pipeline -->
-
-
-
-
 
 <!-- Paper poster -->
 <section class="hero is-small is-light">
