--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
       <div class="columns">
         <div class="column">
           <div style="text-align: center;"> 
-            <img src="static/images/fig2.pdf" alt="MY ALT TEXT" width="600" height="auto"/>
+<!--             <img src="static/images/fig2.pdf" alt="MY ALT TEXT" width="600" height="auto"/> -->
+            <embed src="static/images/fig2.pdf" alt="Overall Pipeline" width="600" height="auto"/>
           </div>
           <p>
             Hi
