--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="column">
           <div style="text-align: center;"> 
 <!--             <img src="static/images/fig2.pdf" alt="MY ALT TEXT" width="600" height="auto"/> -->
-            <embed src="static/images/fig2.pdf" alt="Overall Pipeline" width="600" height="auto"/>
+            <embed src="static/images/fig2.pdf" alt="Overall Pipeline" width="1000" height="600"/>
           </div>
           <p>
             Hi
