--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
   <title>FIZZ: Factual Inconsistency Detection by Zoom-in Summary and Zoom-out Document</title>
-  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="static/images/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
 
@@ -136,8 +136,7 @@
       <div class="columns">
         <div class="column">
           <div style="text-align: center;"> 
-<!--             <img src="static/images/fig2.pdf" alt="MY ALT TEXT" width="600" height="auto"/> -->
-            <embed src="static/images/fig2.svg" alt="Overall Pipeline" width="1000" height="600"/>
+            <img src="static/images/fig2.svg" alt="Overall Pipeline" width="600" height="auto"/>
           </div>
           <p>
             Hi
