--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <div class="columns">
         <div class="column">
           <div style="text-align: center;"> 
-            <img src="static/images/fig2.svg" alt="Overall Pipeline" width="auto" height="auto"/>
+            <img src="static/images/fig2.svg" alt="Overall Pipeline" width="800" height="auto"/>
           </div>
           <p>
             Hi
