Added Experimental Results

--- a/index.html
+++ b/index.html
@@ -148,6 +148,36 @@
 </section>
 <!-- End Pipeline -->
 
+<!-- Experimental Results -->
+<section class="hero is-small">
+  <div class="hero-body">
+    <div class="container">
+      <h2 class="title is-3">Experimental Results</h2>
+      
+      <!-- Other two items in two columns -->
+      <div class="columns">
+        <div class="column is-half">
+          <p class="title is-4">Results on AggreFact-FtSota Dataset</p>
+          <img src="static/images/Table1.png" alt="AggreFact-FtSota Results" width="80%" height="auto"/>
+          <p>
+            We report balanced accuracy results using a single threshold with 95% confidence intervals on the AggreFact-FtSota split dataset.
+            Highest performance is highligted in bold, and the second highest is underlined
+          </p>
+        </div>
+    
+        <div class="column is-half">
+          <p class="title is-4">Results on AggreFact Dataset</p>
+          <img src="static/images/Table2.png" alt="AggreFact Results" width="80%" height="auto"/>
+          <p>
+            We report balanced accuracy results on the AggreFact dataset. As in Tang et al. (2023), we omitted the results from DAE, as it was trained on the XSumFaith (Goyal and Durrett, 2021) dataset, which includes human-annotated summaries from EXformer and Old.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End Experimental Results -->
+
 <!-- Paper poster -->
 <section class="hero is-small is-light">
   <div class="hero-body">
