--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
           </p>
         </div>
 
-        <div class="column is-one-third"></div>
+        <div class="column is-one-third">
           <p class="title is-4">Granularity Size Analysis</p>
           <img src="static/images/Table5.png" alt="Granularity Size Analysis" width="80%" height="auto"/>
           <p>
@@ -311,20 +311,29 @@
 </section>
 <!-- End Analysis -->
 
-<!-- Paper poster -->
+<!-- Poster -->
 <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title">Poster</h2>
-
-      <iframe  src="static/pdfs/2024_EMNLP_FIZZ.pdf" width="100%" height="550">
-          </iframe>
-        
-      </div>
+      <h2 class="title">Paper</h2>
+      <iframe  src="static/pdfs/FIZZ_slides.pdf" width="100%" height="550">
+      </iframe>  
     </div>
-  </section>
-<!--End paper poster -->
+  </div>
+</section>
+<!--End poster -->
 
+<!-- Paper -->
+<section class="hero is-small is-light">
+  <div class="hero-body">
+    <div class="container">
+      <h2 class="title">Paper</h2>
+      <iframe  src="static/pdfs/2024_EMNLP_FIZZ.pdf" width="100%" height="550">
+      </iframe>
+    </div>
+  </div>
+</section>
+<!--End paper -->
 
 <!--BibTex citation -->
   <section class="section" id="BibTeX">
