--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title is-3">Atomic Facts Scoring/h2>
+      <h2 class="title is-3">Atomic Facts Scoring</h2>
       <div class="columns">
         <div class="column is-half">
           <p class="title is-4">Atomic Facts Pair-Wise Scoring</p>
@@ -315,7 +315,7 @@
 <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title">Paper</h2>
+      <h2 class="title">Poster</h2>
       <iframe  src="static/pdfs/FIZZ_slides.pdf" width="100%" height="550">
       </iframe>  
     </div>
