--- a/index.html
+++ b/index.html
@@ -339,7 +339,15 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <pre><code>@misc{yang2024fizzfactualinconsistencydetection,
+        title={FIZZ: Factual Inconsistency Detection by Zoom-in Summary and Zoom-out Document}, 
+        author={Joonho Yang and Seunghyun Yoon and Byeongjeong Kim and Hwanhee Lee},
+        year={2024},
+        eprint={2404.11184},
+        archivePrefix={arXiv},
+        primaryClass={cs.CL},
+        url={https://arxiv.org/abs/2404.11184}, 
+  }</code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
