Fixed Twitter Tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
-  <meta name="description" content="EMNLP 2024 FIZZ">
+  <meta name="description" content="EMNLP 2024 Main Conference Paper FIZZ">
   <meta property="og:title" content="EMNLP 2024 FIZZ"/>
   <meta property="og:description" content="EMNLP 2024 Main Conference Paper"/>
   <meta property="og:url" content="https://plm3332.github.io/EMNLP2024/"/>
@@ -13,14 +13,13 @@
   <meta property="og:image:width" content="1200"/>
   <meta property="og:image:height" content="630"/>
 
-
-  <meta name="twitter:title" content="TWITTER BANNER TITLE META TAG">
-  <meta name="twitter:description" content="TWITTER BANNER DESCRIPTION META TAG">
+  <meta name="twitter:title" content="EMNLP 2024 FIZZ">
+  <meta name="twitter:description" content="EMNLP 2024 Main Conference Paper">
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X600-->
-  <meta name="twitter:image" content="static/images/your_twitter_banner_image.png">
-  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="static/images/favicon.svg"> -->
+  <!-- <meta name="twitter:card" content="summary_large_image">
   <!-- Keywords for your paper to be indexed by-->
-  <meta name="keywords" content="KEYWORDS SHOULD BE PLACED HERE">
+  <meta name="keywords" content="EMNLP2024">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
