--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="EMNLP 2024 Main Conference Paper FIZZ">
   <meta property="og:title" content="EMNLP 2024 FIZZ"/>
   <meta property="og:description" content="EMNLP 2024 Main Conference Paper"/>
-  <meta property="og:url" content="https://plm3332.github.io/EMNLP2024/"/>
+  <meta property="og:url" content="https://plm3332.github.io/EMNLP2024"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
   <meta property="og:image" content="static/image/favicon.svg" />
   <meta property="og:image:width" content="1200"/>
