Fixed Twitter Card

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="twitter:description" content="EMNLP 2024 Main Conference Paper">
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X600-->
   <meta name="twitter:image" content="static/images/favicon.svg">
-  <!-- <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:card" content="static/images/favicon.svg">
   <!-- Keywords for your paper to be indexed by-->
   <meta name="keywords" content="EMNLP2024">
   <meta name="viewport" content="width=device-width, initial-scale=1">
